...
                }
                    VStack(alignment: .leading) {
                        Text(recipe.name)
                            .font(.title)
                            .bold()
                            .padding(.vertical, 10)
                            .accessibilityIdentifier("recipe_view_title")
                        Text(recipe.description)
                            .font(.callout)
                            .bold()
                            .padding(.vertical, 10)
                        Text("Ingredientes:")
                            .font(.title3)
...
                                location: recipe.location,
                                name: recipe.name
                            )
                            router.goToRecipeLoactionMap(location: location)
                        }
                        .buttonStyle(.borderedProminent)
                        .accessibilityIdentifier("recipe_view_map_button")
                        .foregroundColor(.white)
                    }
                    .padding(.horizontal, 16)
                    .foregroundColor(.black)
                }
                .padding(.bottom, 16)
...
