...
            .background(Color.white)
            .cornerRadius(8)
            .shadow(color: Color.black.opacity(0.2), radius: 2, x: 0, y: 4)
        }
        .foregroundColor(.black)
        .buttonStyle(.plain)
        .accessibilityIdentifier("recipe_list_item")
    }
}

#Preview("Recipe List Item", traits: .sizeThatFitsLayout) {
    HomeRecipeCellView(
        recipe: PreviewRecipesRequestData.recipes.first!
...
