...
                            latitude: mapLocation.location.lat,
                            longitude: mapLocation.location.lng
                        )) {
                            VStack {
                                Text(mapLocation.name)
                                    .font(.title3)
                                    .accessibilityIdentifier("recipe_location_view_title")
                                Image(systemName: "fork.knife.circle.fill")
                                    .font(.system(size: 24))
                            }
                            .foregroundColor(.red)
                            .padding()
                            .background(in: .buttonBorder)
...
